homework06/HW6_Evals.txt

Evaluation for homework 06: Brobdingnagian Integer
   and associated Fibonacci sequence using BrobInt

BrobInt class
Includes running BrobIntTester test harness
Includes running Fibonacci requesting several numbers
   View h6.bat to see test parameters used
   View testresults.txt to see resulting output
NOTE: "Brobdingnagian Integer" is abbreviated "BrobInt"
=======================================================

A total of one point each for the following,
   except where noted:

BrobInt class file exists           : 1 point compile error
BrobInt constructor                 : 1 point
BrobInt add method                  : 1 point
BrobInt subtract method             : 1 point
BrobInt validate digits method      : 1 point
BrobInt reverser method [of 2]      : 2 points

BrobInt Tester class                : 1 point
BrobInt add [of 9]                  : 4 points
BrobInt subtract [of 7]             : 0 points
BrobInt mult [of 7, 1 pt. EC]       : 1 point
BrobInt div [of 2, 1 pt. EC]        : 0 point
BrobInt remainder [of 2, 1 pt. EC]  : 0 point

Fib class file exists               : 1 point compile error
Fib constructor                     : 1 point
Fib input error handling            : 1 point
Fib output correct number [of 4]    : 0 points

All of the Fibonacci tests produced the same error:
Exception in thread "main" java.lang.StringIndexOutOfBoundsException: String index out of range: 0
        at BrobInt.toString(BrobInt.java:262)
        at Fibonacci.Fibonacci(Fibonacci.java:29)
        at Fibonacci.main(Fibonacci.java:37)



Minimum three files in repo (3)     : 3 points
All files compile (3)               : 3 points
Coding Style                        : 0 points

Your BrobInt.java code initially did not compile.  A big
   part of the problem is your inconsistent indentation
   style.  Make sure you indent consistently, and you will
   have fewer problems like this:

BrobInt.java:276: error: reached end of file while parsing
    }
     ^
1 error

Your Fibonacci class also did not initially compile.  I fixed the
compile errors at no cost to you, since they were easy fixes and
I could be sure I wouldn't break anything.


Javadocs                            : 0 point

This was specified in no uncertain terms as part of this
   assignment.

Total possible score: 40 points
[EC] adds a total of:  3 points

Evaluation
==========
   22 out of 40 = 55.00% which is an F

Feel free to schedule some office hours to consult on the final
assignment.
